--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- font  -->
-
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- google fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
     <!-- stylesheet -->
@@ -13,11 +13,20 @@
 <body>
     <div class="container">
         <div class="search-box">
-            <input type="text" 
+            <input 
+            type="text" 
             placeholder="Type the word to search"
             id="inp-word"
             />
             <button id="search-btn">Search</button>
+        </div>
+        <div class="result">
+            <div class="word">
+                <h3>Sample</h3>
+                <button>
+                    <i class="fa-solid fa-volume-high"></i>
+                </button>
+            </div>
         </div>
     </div>
 </body>
