Added word meaning and example section styling

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
                     <i class="fa-solid fa-volume-high"></i>
                 </button>
             </div>
+            <div class="details">
+                <p>pos</p>
+                <p>/Sample/</p>
+            </div>
+            <p class="word-meaning">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, inventore.
+            </p>
+            <p class="word-example">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, rem!
+            </p>
         </div>
     </div>
 </body>
